# CachyPac

./: .SRCINFO  .gitignore  Cargo.toml  GUIDE_COMPILATION_TEST.md  GUIDE_INTERNATIONALISATION.md  GUIDE_SERVICE_SYSTEMD.md  INSTALLATION.md  INTELLIGENCE.md  LICENSE  MEMO_PROJET_CACHYRUST.md  PKGBUILD-local  README.md  TELEGRAM_ACTIVATION_GUIDE.md  TEST_TELEGRAM_SAUVEGARDE.md  cachypac.desktop  config.example.toml  config.intelligence.example.toml  config.toml.example  install-icons-user.sh  install-service-dev.sh  install.sh  manage-service.sh  test-diagnostic.sh  test-package.sh  uninstall.sh  update-icons.sh
aur/: .SRCINFO  PKGBUILD  README.md
docs/: AUR_PACKAGE.md  INTERNATIONALIZATION.md  api_documentation.md  performance_optimizations.md  quick_start.md  telegram_diagnostic_guide.md  telegram_troubleshooting.md  user_guide.md
examples/: simple_intelligence.rs  telegram_diagnostic.rs
locales/: de.ftl  en.ftl  es.ftl  fr.ftl  it.ftl  ja.ftl  pt.ftl  ru.ftl  zh.ftl
resources/: cachy-rust-autostart.desktop  cachy-rust-launcher.sh  cachy-rust-tray.service  cachy-rust-tray.sh  cachy-rust.desktop
scripts/: post-install.sh
src/: config.rs  gui.rs  history.rs  i18n.rs  lib.rs  logs.rs  main.rs  pacman.rs  performance.rs  scheduler.rs  service.rs  telegram.rs  telegram_robust.rs
systemd/: cachypac-dev.service  cachypac.service
tests/: integration_tests.rs  telegram_integration_tests.rs
